# pxp

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  box.json  composer.json  phpstan-baseline.neon  phpstan.neon  pxp
crates/analyser/: Cargo.toml
crates/analyser/src/: collection.rs  context.rs  lib.rs  reporter.rs  rule.rs  runner.rs
crates/analyser/src/ast/: mod.rs  return_finder.rs
crates/analyser/src/rules/: mod.rs
crates/ast/: Cargo.toml
crates/ast/meta/: ast.yaml
crates/ast/src/: array.rs  backed_enum_type.rs  comments.rs  data_type.rs  docblock.rs  generated.rs  id.rs  identifiers.rs  lib.rs  literals.rs  modifiers.rs  name.rs  node.rs  operators.rs  properties.rs  spanned.rs  utils.rs  variables.rs  visibility.rs
crates/ast/src/visitor/: immutable.rs  mod.rs  mutable.rs  node.rs  visitor.rs  visitor_mut.rs  walk.rs  walk_mut.rs
crates/index/: Cargo.toml
crates/index/src/: file.rs  function.rs  indexer.rs  lib.rs  location.rs
crates/index/src/entities/: class.rs  function.rs  method.rs  mod.rs  parameters.rs
crates/index/src/reflection/: class.rs  function.rs  method.rs  mod.rs  parameters.rs  type.rs
crates/index/tests/: index.rs
crates/index/tests/fixtures/: class.php  function.php  functions.php  interface.php
crates/inference/: Cargo.toml
crates/inference/src/: engine.rs  generator.rs  lib.rs  map.rs
crates/konsole/: Cargo.toml  README.md
crates/konsole/examples/: add.rs  hello.rs  optional_argument.rs
crates/konsole/src/: application.rs  command.rs  input.rs  lib.rs  output.rs  prelude.rs
crates/lexer/: Cargo.toml  README.md
crates/lexer/src/: diagnostics.rs  error.rs  lib.rs  macros.rs  source.rs
crates/lexer/src/state/: mod.rs  source.rs
crates/node-finder/: Cargo.toml
crates/node-finder/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/fuzz/: Cargo.toml
crates/parser/fuzz/fuzz_targets/: parse.rs
crates/parser/src/: diagnostics.rs  expressions.rs  imports.rs  internal.rs  lib.rs  macros.rs  state.rs
crates/parser/src/internal/: arrays.rs  attributes.rs  blocks.rs  classes.rs  comments.rs  const.rs  constants.rs  control_flow.rs  data_type.rs  diagnostics.rs  docblock.rs  enums.rs  expressions.rs  functions.rs  goto.rs  halt_compiler.rs  identifiers.rs  imports.rs  interfaces.rs  literals.rs  loops.rs  mod.rs  modifiers.rs  names.rs  namespace.rs  namespaces.rs  open_tags.rs  parameters.rs  precedences.rs  properties.rs  statement.rs  strings.rs  traits.rs  try_block.rs  use.rs  uses.rs  utilities.rs  utils.rs  variables.rs
crates/parser/tests/: docblocks.rs  node_visitor.rs  parser.rs
crates/parser/tests/__snapshots__/: abstract_class.snap  add.snap  add_assign.snap  array_trailing_comma.snap  assign.snap  asymmetric_visibility.snap  asymmetric_visibility_promoted_property.snap  attribute.snap  attribute_use.snap  attribute_use_aliased.snap  backed_enum_int.snap  backed_enum_string.snap  binary_op_multi_right_hand_assignment.snap  binary_op_right_hand_assignment.snap  bitwise_and.snap  bitwise_and_assign.snap  bitwise_left_shift.snap  bitwise_left_shift_assign.snap  bitwise_not.snap  bitwise_or.snap  bitwise_or_assign.snap  bitwise_xor.snap  (+216 more)
crates/pls/: Cargo.toml
crates/pls/old/: lsp.rs
crates/pls/src/: backend.rs  capabilities.rs  lsp.rs  main.rs  state.rs
crates/pxp-ast/: Cargo.toml  README.md  build.rs
crates/pxp-ast/meta/: ast.yaml
crates/pxp-ast/src/: arguments.rs  attributes.rs  backed_enum_type.rs  classes.rs  comments.rs  constant.rs  control_flow.rs  data_type.rs  declares.rs  downcast.rs  enums.rs  functions.rs  generated.rs  goto.rs  id.rs  identifiers.rs  interfaces.rs  lib.rs  literals.rs  loops.rs  modifiers.rs  name.rs  namespaces.rs  node.rs  operators.rs  properties.rs  spanned.rs  traits.rs  try_block.rs  utils.rs  variables.rs
crates/pxp-docblock/: Cargo.toml  README.md
crates/pxp-docblock/fixtures/: deprecated.txt  negative-integer.txt  param-ref.txt  qualified-identifier.txt  variable.txt
crates/pxp-docblock/src/: lib.rs
crates/pxp-index/: Cargo.toml
crates/pxp-index/src/: class_like.rs  constant.rs  function.rs  indexer.rs  lib.rs  parameter.rs  reflection.rs
crates/pxp-index/tests/: index.rs
crates/pxp-indexer/: Cargo.toml
crates/pxp-indexer/example-php/: index.php
crates/pxp-indexer/src/: cache.rs  entities.rs  index.rs  indexer.rs  lib.rs  location.rs
crates/pxp-indexer/tests/: integration.rs
crates/pxp-inference/: Cargo.toml
crates/pxp-inference/src/: generator.rs  lib.rs  scope.rs
crates/pxp-inference/tests/: infer.rs
crates/pxp-lexer/: Cargo.toml  README.md
crates/pxp-lexer/examples/: tokenise.rs
crates/pxp-lexer/src/: error.rs  lexer.rs  lib.rs  macros.rs  result.rs  state.rs  stream.rs  tests.rs
crates/pxp-ls/: Cargo.toml
crates/pxp-ls/src/: capabilities.rs  lsp.rs  main.rs
crates/pxp-node-finder/: Cargo.toml
crates/pxp-node-finder/src/: lib.rs
crates/pxp-parser/: Cargo.toml  README.md
crates/pxp-parser/examples/: parse.rs
crates/pxp-parser/fuzz/: Cargo.toml
crates/pxp-parser/src/: diagnostics.rs  error.rs  expressions.rs  lib.rs  macros.rs  node.rs  printer.rs  result.rs  state.rs  token_stream.rs
crates/pxp-parser/tests/: node_visitor.rs  parser.rs
crates/pxp-syntax/: Cargo.toml
crates/pxp-syntax/src/: backed_enum_type.rs  comments.rs  identifier.rs  lib.rs  name.rs  visibility.rs
crates/pxp-tools/: Cargo.toml
crates/pxp-tools/src/: main.rs
crates/pxp-typemap/: Cargo.toml
crates/pxp-typemap/example-php/: array.php  closures.php  error-suppress.php  parenthesized.php  scalar.php  stubs.php  ternaries.php  variables.php
crates/pxp-typemap/src/: generator.rs  lib.rs  type_map.rs
crates/pxp-visitor/: Cargo.toml  build.rs
crates/pxp-visitor/src/: lib.rs  name_resolver.rs  node_visitor.rs  traverser.rs  visitor.rs  visitor_mut.rs  walk.rs  walk_mut.rs
crates/type/: Cargo.toml
crates/type/src/: lib.rs
internal/: Cargo.toml
tools/: Cargo.toml
tools/pls/: Cargo.toml
tools/pls/src/: backend.rs  capabilities.rs
tools/src/: main.rs
(+7149 files in other folders)
