[package]
name = "pxp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "color"] }
clap-verbosity-flag = "2.0.0"
discoverer = "0.1.0"
env_logger = { version = "0.10.0", features = ["color"] }
lazy_static = "1.4.0"
log = "0.4.17"
pxp-parser = { git = "https://github.com/pxp-lang/parser", branch = "main" }
