[package]
name = "pxp"
authors = [
    "Ryan Chandler <support@ryangjchandler.co.uk>"
]
version = "0.0.0-b1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "color"] }
colored = "2.0.0"
discoverer = "0.2.0"
include_dir = { version = "0.7.3", features = ["glob"] }
lazy_static = "1.4.0"
pxp-parser = { git = "https://github.com/pxp-lang/parser", branch = "main" }
serde = "1.0.152"
toml = "0.5.10"
