[package]
name = "pxp-internal"
description = "A set of internal tools for testing various parts of the PXP project."
version = "0.1.0"
edition = "2021"
license-file.workspace = true


[dependencies]
pxp-lexer = { path = "../crates/lexer" }
pxp-token = { path = "../crates/token" }
pxp-parser = { path = "../crates/parser" }
discoverer = "0.2.0"
rustyline = "13.0.0"
indicatif = "0.17.8"
pxp-ast = { version = "0.1.0", path = "../crates/ast" }
pxp-node-finder = { version = "0.1.0", path = "../crates/node-finder" }
pxp-bytestring = { version = "0.1.0", path = "../crates/bytestring" }
num_cpus = "1.16.0"
pxp-span = { version = "0.1.0", path = "../crates/span" }

[[bin]]
name = "visit"
path = "bin/visit.rs"

[[bin]]
name = "node-finder"
path = "bin/node_finder.rs"

[[bin]]
name = "node-visit"
path = "bin/node_visit.rs"
