[package]
name = "pxp-analyser"
description = "A collection of static analysis rules."
version.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
pxp-ast = { version = "0.1.0", path = "../ast" }
pxp-diagnostics = { version = "0.1.0", path = "../diagnostics" }
pxp-inference = { version = "0.1.0", path = "../inference" }
pxp-span = { version = "0.1.0", path = "../span" }
pxp-type = { version = "0.1.0", path = "../type" }
