[package]
name = "pxp-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
pxp-token = { path = "../token" }
pxp-span = { path = "../span" }
pxp-type = { path = "../type" }
pxp-bytestring = { path = "../bytestring" }
