[package]
name = "pxp-index"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
pxp-ast = { version = "0.1.0", path = "../ast" }
pxp-bytestring = { version = "0.1.0", path = "../bytestring" }
pxp-lexer = { version = "0.1.0", path = "../lexer" }
pxp-parser = { version = "0.1.0", path = "../parser" }
pxp-span = { version = "0.1.0", path = "../span" }
pxp-type = { version = "0.1.0", path = "../type" }

[dev-dependencies]
discoverer = "0.2.0"
pxp-parser = { path = "../parser" }
