[package]
name = "pxp-inference"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
pxp-ast = { version = "0.1.0", path = "../ast" }
pxp-bytestring = { version = "0.1.0", path = "../bytestring" }
pxp-index = { version = "0.1.0", path = "../index" }
pxp-type = { version = "0.1.0", path = "../type" }

[dev-dependencies]
pxp-lexer = { path = "../lexer" }
pxp-node-finder = { path = "../node-finder" }
pxp-parser = { path = "../parser" }
