[package]
name = "pxp-inference"
description = "Performs type inference on PHP code."
version.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
pxp-ast = { version = "0.1.0", path = "../ast" }
pxp-index = { version = "0.1.0", path = "../index" }
pxp-type = { version = "0.1.0", path = "../type" }
