[package]
name = "konsole"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
indexmap = "2.2.3"

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "add"
path = "examples/add.rs"

[[example]]
name = "optional-argument"
path = "examples/optional_argument.rs"