[package]
name = "pxp-lexer"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
pxp-token = { path = "../token" }
pxp-span = { path = "../span" }
pxp-bytestring = { path = "../bytestring" }
pxp-diagnostics = { version = "0.1.0", path = "../diagnostics" }

[features]
default = []
docblocks = []

