[package]
name = "pxp-node-finder"
version = "0.1.0"
edition = "2021"
license-file.workspace = true
rust-version.workspace = true

[dependencies]
pxp-ast = { version = "0.1.0", path = "../ast" }
pxp-span = { version = "0.1.0", path = "../span" }

[dev-dependencies]
pxp-lexer = { path = "../lexer" }
pxp-parser = { path = "../parser" }
