[package]
name = "pxp-node-finder"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
pxp-ast = { version = "0.1.0", path = "../ast" }
pxp-span = { version = "0.1.0", path = "../span" }

[dev-dependencies]
pxp-lexer = { path = "../lexer" }
pxp-parser = { path = "../parser" }
