[package]
name = "pxp-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
pxp-span = { path = "../span" }
pxp-bytestring = { path = "../bytestring" }
pxp-token = { path = "../token" }
pxp-ast = { path = "../ast" }
pxp-lexer = { path = "../lexer" }
pxp-type = { path = "../type" }
pxp-diagnostics = { path = "../diagnostics" }

[dev-dependencies]
snappers = { path = "../snappers" }

[features]
default = []
docblocks = ["pxp-ast/docblocks", "pxp-lexer/docblocks"]

[[bin]]
name = "parse"
path = "bin/parse.rs"
