[package]
name = "pxp-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
pxp-span = { path = "../span" }
pxp-bytestring = { path = "../bytestring" }
pxp-token = { path = "../token" }
pxp-ast = { path = "../ast" }
pxp-lexer = { path = "../lexer" }
pxp-type = { path = "../type" }
pxp-diagnostics = { path = "../diagnostics" }

[dev-dependencies]
snappers = { path = "../snappers" }
