[package]
name = "pls"
description = "A free and open-source language server for PHP."
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
pxp-parser = { path = "../pxp-parser" }
pxp-diagnostics = { path = "../pxp-diagnostics" }
pxp-span = { version = "0.1.0", path = "../pxp-span" }
pxp-index = { version = "0.1.0", path = "../pxp-index" }
lsp-textdocument = "0.4.0"
pxp-ast = { version = "0.1.0", path = "../pxp-ast" }
pxp-node-finder = { version = "0.1.0", path = "../pxp-node-finder" }
pxp-type = { version = "0.1.0", path = "../pxp-type" }
pxp-bytestring = { version = "0.1.0", path = "../pxp-bytestring" }
pxp-inference = { version = "0.1.0", path = "../pxp-inference" }
pxp-lsp = { version = "0.1.0", path = "../pxp-lsp" }
serde_json = "1.0.127"
