[package]
name = "pxp-ast"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pxp-token = { path = "../pxp-token" }
pxp-span = { path = "../pxp-span" }
pxp-syntax = { path = "../pxp-syntax" }
pxp-symbol = { path = "../pxp-symbol" }
pxp-type = { path = "../pxp-type" }
pxp-bytestring = { version = "0.1.0", path = "../pxp-bytestring" }

[build-dependencies]
pxp-build = { version = "0.1.0", path = "../pxp-build" }
