[package]
name = "pxp-ast"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
pxp-token = { path = "../pxp-token" }
pxp-span = { path = "../pxp-span" }
pxp-syntax = { path = "../pxp-syntax" }
pxp-type = { path = "../pxp-type" }
pxp-bytestring = { version = "0.1.0", path = "../pxp-bytestring" }
