[package]
name = "pxp-docblock"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pxp-span = { path = "../pxp-span" }
pxp-symbol = { path = "../pxp-symbol" }
pxp-type = { path = "../pxp-type" }
pxp-bytestring = { path = "../pxp-bytestring" }

[[bin]]
name = "parse-doc"
path = "bin/parse-doc.rs"
