[package]
name = "pxp-index"
version = "0.1.0"
edition = "2021"
license-file.workspace = true
rust-version.workspace = true

[dependencies]
pxp-ast = { version = "0.1.0", path = "../pxp-ast" }
pxp-bytestring = { version = "0.1.0", path = "../pxp-bytestring" }
pxp-parser = { version = "0.1.0", path = "../pxp-parser" }
pxp-span = { version = "0.1.0", path = "../pxp-span" }
pxp-type = { version = "0.1.0", path = "../pxp-type" }

[dev-dependencies]
discoverer = "0.2.0"
pxp-parser = { path = "../pxp-parser" }
