[package]
name = "pxp-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pxp-token = { path = "../pxp-token" }
pxp-source = { path = "../pxp-source" }
pxp-span = { path = "../pxp-span" }
pxp-bytestring = { path = "../pxp-bytestring" }