[package]
name = "pxp-lexer"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pxp-token = { path = "../pxp-token" }
pxp-span = { path = "../pxp-span" }
pxp-bytestring = { path = "../pxp-bytestring" }
pxp-syntax = { path = "../pxp-syntax" }
pxp-symbol = { path = "../pxp-symbol" }
discoverer = "0.2.0"

[[bin]]
name = "tokenise"
path = "bin/tokenise.rs"
