[package]
name = "pxp-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
dashmap = "5.1.0"
pxp-parser = { path = "../pxp-parser" }
pxp-symbol= { path = "../pxp-symbol" }
pxp-diagnostics = { path = "../pxp-diagnostics" }

