[package]
name = "pxp-node-finder"
version = "0.1.0"
edition = "2021"
license-file.workspace = true
rust-version.workspace = true

[dependencies]
pxp-ast = { version = "0.1.0", path = "../pxp-ast" }
pxp-span = { version = "0.1.0", path = "../pxp-span" }
pxp-syntax = { version = "0.1.0", path = "../pxp-syntax" }
pxp-visitor = { version = "0.1.0", path = "../pxp-visitor" }
