[package]
name = "pxp-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pxp-token = { path = "../pxp-token" }
pxp-span = { path = "../pxp-span" }
pxp-ast = { path = "../pxp-ast" }

[dev-dependencies]
pxp-lexer = { path = "../pxp-lexer" }
pxp-source = { path = "../pxp-source" }