[package]
name = "pxp-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
pxp-span = { path = "../pxp-span" }
pxp-bytestring = { path = "../pxp-bytestring" }
pxp-token = { path = "../pxp-token" }
pxp-ast = { path = "../pxp-ast" }
pxp-lexer = { path = "../pxp-lexer" }
pxp-syntax = { path = "../pxp-syntax" }
pxp-symbol = { path = "../pxp-symbol" }
pxp-type = { path = "../pxp-type" }
pxp-diagnostics = { path = "../pxp-diagnostics" }
discoverer = "0.2.0"

[[bin]]
name = "parse"
path = "bin/parse.rs"
