[package]
name = "pxp-syntax"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
pxp-bytestring = { version = "0.1.0", path = "../pxp-bytestring" }
pxp-span = { path = "../pxp-span" }
pxp-token = { path = "../pxp-token" }
serde = { version = "1.0.193", features = ["derive"] }
