[package]
name = "pxp-tools"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pxp-lexer = { path = "../pxp-lexer" }
pxp-symbol = { path = "../pxp-symbol" }
pxp-token = { path = "../pxp-token" }
pxp-parser = { path = "../pxp-parser" }
discoverer = "0.2.0"

[[bin]]
name = "tokenise"
path = "bin/tokenise.rs"

[[bin]]
name = "parse"
path = "bin/parse.rs"