[package]
name = "pxp-typemap"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.1.0"
pxp-ast = { version = "0.1.0", path = "../pxp-ast" }
pxp-bytestring = { version = "0.1.0", path = "../pxp-bytestring" }
pxp-parser = { version = "0.1.0", path = "../pxp-parser" }
pxp-span = { version = "0.1.0", path = "../pxp-span" }
pxp-symbol = { version = "0.1.0", path = "../pxp-symbol" }
pxp-syntax = { version = "0.1.0", path = "../pxp-syntax" }
pxp-type = { version = "0.1.0", path = "../pxp-type" }
pxp-visitor = { version = "0.1.0", path = "../pxp-visitor" }

[[bin]]
name = "analyse"
path = "bin/analyse.rs"
