[package]
name = "pxp-visitor"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pxp-ast = { path = "../pxp-ast" }
pxp-syntax = { path = "../pxp-syntax" }
pxp-span = { path = "../pxp-span" }
pxp-type = { path = "../pxp-type" }
pxp-symbol = { path = "../pxp-symbol" }

[build-dependencies]
pxp-build = { version = "0.1.0", path = "../pxp-build" }
