[package]
name = "pxp-type"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
pxp-bytestring = { version = "0.1.0", path = "../bytestring" }
pxp-span = { path = "../span" }
strum = { version = "0.26.3", features = ["derive"] }
