[package]
name = "pls"
description = "A free and open-source language server for PHP."
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
pxp-parser = { path = "../../crates/pxp-parser" }
pxp-diagnostics = { path = "../../crates/pxp-diagnostics" }
pxp-span = { version = "0.1.0", path = "../../crates/pxp-span" }
pxp-index = { version = "0.1.0", path = "../../crates/pxp-index" }
lsp-textdocument = "0.4.0"
pxp-ast = { version = "0.1.0", path = "../../crates/pxp-ast" }
pxp-node-finder = { version = "0.1.0", path = "../../crates/pxp-node-finder" }
pxp-type = { version = "0.1.0", path = "../../crates/pxp-type" }
pxp-bytestring = { version = "0.1.0", path = "../../crates/pxp-bytestring" }
pxp-inference = { version = "0.1.0", path = "../../crates/pxp-inference" }
pxp-lsp = { version = "0.1.0", path = "../../crates/pxp-lsp" }
serde_json = "1.0.127"
discoverer = "0.2.0"
